# ChatGPT_React_Django

./: .gitignore  README.md  docker-compose.build-and-run.yml  docker-compose.pull-and-run.yml  docker-compose.yml
.devcontainer/: Dockerfile.dev  devcontainer.json
backend/: Dockerfile  pyproject.toml  run.sh  setup.sh
backend/backend/: settings.py  urls.py
backend/chatGPTAPP/: apps.py  functions.py  services.py  tests.py  urls.py  views.py
frontend/: Dockerfile  package.json  vite.config.js
frontend/src/: App.js  App.jsx  index.css
frontend/src/components/: ChatInterface.js  ChatSidebar.js
frontend/src/components/chat/: ChatInput.jsx  ChatInterface.jsx  ChatMessage.jsx  ChatSidebar.jsx  MarkdownTable.jsx
frontend/src/components/common/: IconButton.jsx
frontend/src/constants/: config.js
frontend/src/hooks/: useChatMessages.js
frontend/src/services/: api.js
frontend/src/utils/: formatters.js
terraform/: main.tf  outputs.tf  variables.tf
terraform/scripts/: setup.sh
