[tool.poetry]
name = "backend"
version = "0.1.0"
description = "ChatGPT Clone Backend API"
authors = ["Bo Huang"]
packages = [{include = "backend"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
djangorestframework = "^3.14"
python-dotenv = "^1.0"
openai = "^1.12.0"
markdown = "^3.5.2"
django-cors-headers = "^4.3.1"
python-markdown-math = "^0.8"
requests = "^2.31.0"
python-decouple = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
types-requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 